Image Upload/Download

--- a/src/main/webapp/resources/JS_WEBCAM/demo/index.html
+++ b/src/main/webapp/resources/JS_WEBCAM/demo/index.html
@@ -29,6 +29,9 @@
         </div><br>
 
         <button id="take_snapshots">SNAP</button> 
+        <button id="upload_snapshot">UPLOAD</button> 
+        <button id="discard_snapshot">CLEAR</button> 
+       
         <div id="snapshots"></div>
 
     </body>
